chnages in about page and section page

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-about">
+    <!-- <section class="ftco-section ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/car-img1.jpeg);">
@@ -75,7 +75,7 @@
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4">Welcome to VEDANT TOURS</h2>
+	            <h2 class="mb-4">Welcome to <span class="text-primary">VEDANT TOURS</span></h2>
 
 	            <p>At <b>Vedant Tours</b>, we believe that getting behind the wheel should be an exciting and effortless experience. Whether you're planning a road trip, attending a special event, or need a reliable ride for a business trip, we've got you covered. Our diverse fleet of cars ensures that there's a perfect vehicle for every occasion—combining comfort, style, and affordability in every ride. We strive to provide seamless, hassle-free car rental services with a focus on customer satisfaction, so you can focus on enjoying the journey ahead.</p>
 	            <p>With years of experience in the car rental industry, we understand that your time is precious. That's why we offer easy booking, quick pick-up, and drop-off services, all designed to make your experience as smooth and convenient as possible. From luxury vehicles for special events to compact cars for city adventures, we guarantee a quality ride and a smooth experience every time. Choose us for your next rental and discover how easy and enjoyable traveling can be!</p>
@@ -84,7 +84,36 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
+
+    <section class="ftco-section ftco-about">
+      <div class="container">
+          <div class="row no-gutters">
+              <!-- Image Card Section -->
+              <div class="col-md-6 p-md-5 d-flex justify-content-center align-items-center">
+                  <div class="card text-center" style="width: 100%; border: none;">
+                      <img src="images/owner-img.jpeg" class="card-img-top" alt="Luxury Car Rental">
+                      <div class="card-body">
+                          <h5 class="card-title text-primary">Monu Choudhary</h5>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- About Us Content -->
+              <div class="col-md-6 wrap-about ftco-animate">
+                  <div class="heading-section heading-section-white pl-md-5">
+                      <span class="subheading">About us</span>
+                      <h2 class="mb-4">Welcome to <span class="text-primary">VEDANT TOURS</span></h2>
+  
+                      <p>At <b>Vedant Tours</b>, we believe that getting behind the wheel should be an exciting and effortless experience. Whether you're planning a road trip, attending a special event, or need a reliable ride for a business trip, we've got you covered. Our diverse fleet of cars ensures that there's a perfect vehicle for every occasion—combining comfort, style, and affordability in every ride. We strive to provide seamless, hassle-free car rental services with a focus on customer satisfaction, so you can focus on enjoying the journey ahead.</p>
+                      <p>With years of experience in the car rental industry, we understand that your time is precious. That's why we offer easy booking, quick pick-up, and drop-off services, all designed to make your experience as smooth and convenient as possible. From luxury vehicles for special events to compact cars for city adventures, we guarantee a quality ride and a smooth experience every time. Choose us for your next rental and discover how easy and enjoyable traveling can be!</p>
+                      <p><a href="car.html" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  
 
 		<!-- <section class="ftco-section ftco-intro" style="background-image: url(images/car-img2.jpeg);">
 			<div class="overlay"></div>
