--- a/car-single.html
+++ b/car-single.html
@@ -75,7 +75,7 @@
       			<div class="car-details">
       				<div class="img rounded" style="background-image: url(images/bg_1.jpg);"></div>
       				<div class="text text-center">
-      					<span class="subheading">Cheverolet</span>
+      					<span class="subheading">SUV</span>
       					<h2>Mercedes Grand Sedan</h2>
       				</div>
       			</div>
@@ -366,7 +366,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">$500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -394,7 +394,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">$500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
