--- a/car.html
+++ b/car.html
@@ -78,7 +78,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -106,7 +106,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -121,7 +121,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -149,7 +149,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -164,7 +164,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -192,7 +192,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -207,7 +207,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -235,7 +235,7 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Cheverolet</span>
+	    						<span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
