--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					            </div>      
 					          </div>
 					        </div>
-					        <p><a href="https://wa.me/919001006973?text=Hello Vedant Tours, I want to book a car." target="_blank" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
+					        <p style="margin-left: 1.3rem;"><a href="https://wa.me/919001006973?text=Hello Vedant Tours, I want to book a car." target="_blank" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
 	  						</div>
 	  					</div>
 	  				</div>
@@ -160,7 +160,7 @@
     		<div class="row justify-content-center">
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
           	<span class="subheading">What we offer</span>
-            <h2 class="mb-2">Feeatured Vehicles</h2>
+            <h2 class="mb-2">Featured Vehicles</h2>
           </div>
         </div>
     		<div class="row">
@@ -173,7 +173,7 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Totota</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
+			    						<span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -187,7 +187,7 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Fortuner</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
+			    						<span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -201,7 +201,7 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Sedan</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
+			    						<span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -215,7 +215,7 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">BMW</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
+			    						<span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
