added tap to scroll up button and form validation "required"

--- a/services.html
+++ b/services.html
@@ -230,6 +230,9 @@
       </div>
     </footer>
     
+    <button id="scrollToTopBtn" onclick="scrollToTop()">
+      <i class="fa fa-arrow-up"></i>
+    </button>
   
 <a href="https://wa.me/+919001006973?text=Hello, I need assistance!" target="_blank" 
    style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
