--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
@@ -106,16 +106,16 @@
           <div class="col-md-8 block-9 mb-md-5">
             <form action="#" class="bg-light p-5 contact-form">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Your Name" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
+                <input type="text" class="form-control" placeholder="Your Email" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
+                <input type="text" class="form-control" placeholder="Subject" required>
               </div>
               <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
               </div>
               <div class="form-group">
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" style="margin-left: -.5rem;">
@@ -192,6 +192,10 @@
         </div>
       </div>
     </footer>
+
+    <button id="scrollToTopBtn" onclick="scrollToTop()">
+      <i class="fa fa-arrow-up"></i>
+    </button>
   
     <a href="https://wa.me/+919001006973?text=Hello, I need assistance!" target="_blank" 
       style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
