--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
 		          		<h2>Make your trip</h2>
 			    				<div class="form-group">
 			    					<label for="" class="label">Pick-up location</label>
-			    					<input type="text" id="pickup" class="form-control" placeholder="City, Airport, Station, etc">
+			    					<input type="text" id="pickup" class="form-control" placeholder="City, Airport, Station, etc" required>
 			    				</div>
 			    				<div class="form-group">
 			    					<label for="" class="label">Drop-off location</label>
-			    					<input type="text" id="dropoff" class="form-control" placeholder="City, Airport, Station, etc">
+			    					<input type="text" id="dropoff" class="form-control" placeholder="City, Airport, Station, etc" required>
 			    				</div>
 			    				<div class="d-flex">
 			    					<div class="form-group mr-2">
 			                <label for="" class="label">Pick-up date</label>
-			                <input type="text" class="form-control" id="book_pick_date" placeholder="Date">
+			                <input type="text" class="form-control" id="book_pick_date" placeholder="Date" required>
 			              </div>
 			              <div class="form-group ml-2">
 			                <label for="" class="label">Drop-off date</label>
-			                <input type="text" class="form-control" id="book_off_date" placeholder="Date">
+			                <input type="text" class="form-control" id="book_off_date" placeholder="Date" required>
 			              </div>
 		              </div>
 		              <div class="form-group">
 		                <label for="" class="label">Pick-up time</label>
-		                <input type="text" class="form-control" id="time_pick" placeholder="Time">
+		                <input type="text" class="form-control" id="time_pick" placeholder="Time" required>
 		              </div>
 			            <div class="form-group">
-			              <input type="submit" value="Send Enquiry" class="btn btn-secondary py-3 px-4">
+			              <input type="submit" value="Send Enquiry" class="btn btn-secondary py-3 px-4" required>
 			            </div>
 			    			</form>
 	  					</div>
@@ -415,6 +415,9 @@
       </div>
     </footer>
     
+    <button id="scrollToTopBtn" onclick="scrollToTop()">
+      <i class="fa fa-arrow-up"></i>
+    </button>
   
 <a href="https://wa.me/+919001006973?text=Hello, I need assistance!" target="_blank" 
    style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
@@ -445,35 +448,7 @@
 
     setInterval(changeHeading, 3000); // Change heading every 3 seconds
 </script>
-<script>
-function sendToWhatsApp(event) {
-    event.preventDefault(); // Prevent form submission
 
-    // Get input values
-    let pickup = document.getElementById("pickup").value;
-    let dropoff = document.getElementById("dropoff").value;
-    let pickDate = document.getElementById("book_pick_date").value;
-    let dropDate = document.getElementById("book_off_date").value;
-    let pickTime = document.getElementById("time_pick").value;
-
-    // Your WhatsApp number (with country code)
-    let phoneNumber = "+919001006973";
-
-    // Create the WhatsApp message
-    let message = `Hello, I want to book a car.%0A
-    🚖 Pick-up Location: ${pickup}%0A
-    📍 Drop-off Location: ${dropoff}%0A
-    📅 Pick-up Date: ${pickDate}%0A
-    📅 Drop-off Date: ${dropDate}%0A
-    ⏰ Pick-up Time: ${pickTime}`;
-
-    // WhatsApp API URL
-    let url = `https://wa.me/${phoneNumber}?text=${message}`;
-
-    // Redirect to WhatsApp
-    window.open(url, "_blank");
-}
-</script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
